--- a/pypi/scrypted-arlo-go/index.html
+++ b/pypi/scrypted-arlo-go/index.html
@@ -40,11 +40,20 @@
     scrypted-arlo-go
    </section>
    <pre><code>pip install scrypted-arlo-go --extra-index-url https://bjia56.github.io/scrypted-arlo-go/</code></pre>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-macosx_10_15_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp310-cp310-macosx_10_15_x86_64.whl
+   </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-macosx_11_0_arm64.whl">
     scrypted_arlo_go-0.0.1-cp310-cp310-macosx_11_0_arm64.whl
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-macosx_11_0_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp310-cp310-macosx_11_0_x86_64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-macosx_12_0_arm64.whl">
+    scrypted_arlo_go-0.0.1-cp310-cp310-macosx_12_0_arm64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-macosx_12_0_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp310-cp310-macosx_12_0_x86_64.whl
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp310-cp310-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
@@ -61,6 +70,12 @@
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp311-cp311-macosx_11_0_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp311-cp311-macosx_11_0_x86_64.whl
    </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp311-cp311-macosx_12_0_arm64.whl">
+    scrypted_arlo_go-0.0.1-cp311-cp311-macosx_12_0_arm64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp311-cp311-macosx_12_0_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp311-cp311-macosx_12_0_x86_64.whl
+   </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp311-cp311-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp311-cp311-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
    </a><br/>
@@ -69,6 +84,15 @@
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp311-cp311-win_amd64.whl">
     scrypted_arlo_go-0.0.1-cp311-cp311-win_amd64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp37-cp37m-macosx_10_15_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp37-cp37m-macosx_10_15_x86_64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp37-cp37m-macosx_11_0_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp37-cp37m-macosx_11_0_x86_64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp37-cp37m-macosx_12_0_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp37-cp37m-macosx_12_0_x86_64.whl
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp37-cp37m-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp37-cp37m-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
@@ -82,6 +106,18 @@
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-macosx_10_15_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp38-cp38-macosx_10_15_x86_64.whl
    </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-macosx_11_0_arm64.whl">
+    scrypted_arlo_go-0.0.1-cp38-cp38-macosx_11_0_arm64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-macosx_11_0_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp38-cp38-macosx_11_0_x86_64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-macosx_12_0_arm64.whl">
+    scrypted_arlo_go-0.0.1-cp38-cp38-macosx_12_0_arm64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-macosx_12_0_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp38-cp38-macosx_12_0_x86_64.whl
+   </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp38-cp38-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
    </a><br/>
@@ -93,6 +129,18 @@
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-macosx_10_15_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp39-cp39-macosx_10_15_x86_64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-macosx_11_0_arm64.whl">
+    scrypted_arlo_go-0.0.1-cp39-cp39-macosx_11_0_arm64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-macosx_11_0_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp39-cp39-macosx_11_0_x86_64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-macosx_12_0_arm64.whl">
+    scrypted_arlo_go-0.0.1-cp39-cp39-macosx_12_0_arm64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-macosx_12_0_x86_64.whl">
+    scrypted_arlo_go-0.0.1-cp39-cp39-macosx_12_0_x86_64.whl
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp39-cp39-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
