--- a/pypi/scrypted-arlo-go/index.html
+++ b/pypi/scrypted-arlo-go/index.html
@@ -55,6 +55,9 @@
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-macosx_12_0_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp310-cp310-macosx_12_0_x86_64.whl
    </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl">
+    scrypted_arlo_go-0.0.1-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
+   </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp310-cp310-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp310-cp310-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
    </a><br/>
@@ -76,6 +79,9 @@
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp311-cp311-macosx_12_0_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp311-cp311-macosx_12_0_x86_64.whl
    </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl">
+    scrypted_arlo_go-0.0.1-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
+   </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp311-cp311-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp311-cp311-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
    </a><br/>
@@ -93,6 +99,9 @@
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp37-cp37m-macosx_12_0_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp37-cp37m-macosx_12_0_x86_64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp37-cp37m-manylinux_2_17_aarch64.manylinux2014_aarch64.whl">
+    scrypted_arlo_go-0.0.1-cp37-cp37m-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp37-cp37m-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp37-cp37m-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
@@ -118,6 +127,9 @@
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-macosx_12_0_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp38-cp38-macosx_12_0_x86_64.whl
    </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl">
+    scrypted_arlo_go-0.0.1-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
+   </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp38-cp38-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp38-cp38-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
    </a><br/>
@@ -141,6 +153,9 @@
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-macosx_12_0_x86_64.whl">
     scrypted_arlo_go-0.0.1-cp39-cp39-macosx_12_0_x86_64.whl
+   </a><br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl">
+    scrypted_arlo_go-0.0.1-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
    </a><br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.1/scrypted_arlo_go-0.0.1-cp39-cp39-manylinux_2_17_armv7l.manylinux2014_armv7l.whl">
     scrypted_arlo_go-0.0.1-cp39-cp39-manylinux_2_17_armv7l.manylinux2014_armv7l.whl
