--- a/pypi/scrypted-arlo-go/index.html
+++ b/pypi/scrypted-arlo-go/index.html
@@ -397,6 +397,26 @@
     scrypted_arlo_go-0.0.2-cp39-cp39-win_amd64.whl
    </a>
    <br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.2/scrypted_arlo_go-0.0.2-cp310-cp310-macosx_10_15_x86_64.whl">
+    scrypted_arlo_go-0.0.2-cp310-cp310-macosx_10_15_x86_64.whl
+   </a>
+   <br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.2/scrypted_arlo_go-0.0.2-cp311-cp311-macosx_10_15_x86_64.whl">
+    scrypted_arlo_go-0.0.2-cp311-cp311-macosx_10_15_x86_64.whl
+   </a>
+   <br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.2/scrypted_arlo_go-0.0.2-cp37-cp37m-macosx_10_15_x86_64.whl">
+    scrypted_arlo_go-0.0.2-cp37-cp37m-macosx_10_15_x86_64.whl
+   </a>
+   <br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.2/scrypted_arlo_go-0.0.2-cp38-cp38-macosx_10_15_x86_64.whl">
+    scrypted_arlo_go-0.0.2-cp38-cp38-macosx_10_15_x86_64.whl
+   </a>
+   <br/>
+   <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.2/scrypted_arlo_go-0.0.2-cp39-cp39-macosx_10_15_x86_64.whl">
+    scrypted_arlo_go-0.0.2-cp39-cp39-macosx_10_15_x86_64.whl
+   </a>
+   <br/>
    <a href="https://github.com/bjia56/scrypted-arlo-go/releases/download/v0.0.3/scrypted_arlo_go-0.0.3-cp310-cp310-macosx_11_0_arm64.whl">
     scrypted_arlo_go-0.0.3-cp310-cp310-macosx_11_0_arm64.whl
    </a>
